@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-14T02:01:09Z",
-  "count_outdated" : 5865,
-  "uniques_outdated" : 1194,
+  "timestamp" : "2025-09-14T12:44:12Z",
+  "count_outdated" : 5867,
+  "uniques_outdated" : 1195,
   "count" : 5900,
   "uniques" : 1209,
   "views" : [
-    {
-      "timestamp": "2025-08-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-02T00:00:00Z",
       "count": 3,
