@@ -1,12 +1,7 @@
 {
-  "count": 35,
-  "uniques": 15,
+  "count": 33,
+  "uniques": 14,
   "views": [
-    {
-      "timestamp": "2025-08-31T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-02T00:00:00Z",
       "count": 3,
